# copernicus-radar

./: README.org  gen00.lisp
source/: CMakeLists.txt  copernicus_00_main.cpp  copernicus_00_main.hpp  copernicus_01_mmap.cpp  copernicus_01_mmap.hpp  copernicus_02_collect_packet_headers.cpp  copernicus_02_collect_packet_headers.hpp  copernicus_03_process_packet_headers.cpp  copernicus_03_process_packet_headers.hpp  copernicus_04_decode_packet.cpp  copernicus_04_decode_packet.hpp  copernicus_05_decode_type_ab_packet.cpp  copernicus_05_decode_type_ab_packet.hpp  copernicus_06_decode_sub_commutated_data.cpp  copernicus_06_decode_sub_commutated_data.hpp  copernicus_07_decode_type_c_packet.cpp  copernicus_07_decode_type_c_packet.hpp  copernicus_08_demangle.cpp  copernicus_08_demangle.hpp  copernicus_09_python.cpp  copernicus_09_python.hpp  globals.h  makefile  utils.h  vis_00_main.cpp  vis_00_main.hpp  vis_01_mmap.cpp  vis_01_mmap.hpp  vis_02_collect_packet_headers.cpp  vis_02_collect_packet_headers.hpp  vis_03_process_packet_headers.hpp  vis_04_decode_packet.cpp  vis_04_decode_packet.hpp  vis_05_decode_type_ab_packet.cpp  vis_05_decode_type_ab_packet.hpp  vis_06_decode_sub_commutated_data.hpp  vis_07_decode_type_c_packet.cpp  vis_07_decode_type_c_packet.hpp
